--- a/Лр2.md
+++ b/Лр2.md
@@ -22,3 +22,8 @@
 * возможность просмотра фильмов на сайте
 
 [Макет](https://www.figma.com/file/0iMZJEvT7dDQutkTWcDWlv/Untitled?node-id=0%3A1)
+
+![Снимок экрана (130)](https://user-images.githubusercontent.com/98607315/163543249-973ac340-c66a-48a9-bca2-fa4d7684e14b.png)
+
+![Снимок экрана (131)](https://user-images.githubusercontent.com/98607315/163543374-21d57adf-7b0c-4f91-a170-e58648ce25d7.png)
+
