--- a/Лр2.md
+++ b/Лр2.md
@@ -2,7 +2,7 @@
 Целевая аудитория - люди по всему миру, любящие фильмы киновселенной Marvel. Вселенная Marvel — это попадание в потребности и интересы буквально каждой возрастной 
 группы. Данный сайт заинтересует людей, которые хотят посмотреть фильмы, узнать информацию о героях или новости о киновселенной Marvel.
 
-Конкуренты:
+Конкуренты (недостатки):
 1. https://www.marvel.com/ - сайт Marvel имеет неудобный интерфейс, непривлекательный внешне, а также много рекламы. Слишком много лишней информации и ненужных деталей
 2. https://marvel.com.ru/ - встречается слишком маленький текст, не везде удачное расположение элементов
 3. https://marvel.fandom.com/ru/wiki/%D0%A1%D0%BF%D0%B8%D1%81%D0%BE%D0%BA_%D1%84%D0%B8%D0%BB%D1%8C%D0%BC%D0%BE%D0%B2_Marvel - неудобный интерфейс, непривлекательный внешне,
